<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="GeneralMessage" Id="{69b911bf-3a99-4768-a3cd-53f834d145f8}">
    <Declaration><![CDATA[TYPE GeneralMessage :
STRUCT
	Id: DINT;
	BitNumber: DINT;
	Text: STRING;
	AltText: STRING;
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>